--- a/package.json
+++ b/package.json
@@ -10,12 +10,25 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.32",
     "@ai-sdk/react": "^2.0.48",
+    "@radix-ui/react-use-controllable-state": "^1.1.0",
     "ai": "^5.0.48",
+    "ai-elements": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
+    "lucide-react": "^0.542.0",
     "mapbox-gl": "^3.15.0",
+    "nanoid": "^5.1.5",
     "next": "15.5.3",
+    "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-map-gl": "^8.0.4",
+    "react-syntax-highlighter": "^15.6.6",
+    "streamdown": "^1.3.0",
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.8",
+    "use-stick-to-bottom": "^1.1.1",
     "zod": "^4.1.11"
   },
   "devDependencies": {
@@ -23,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
