--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ai-sdk/gateway": "^1.0.25",
     "@ai-sdk/openai": "^2.0.32",
     "@ai-sdk/react": "^2.0.48",
+    "@neondatabase/serverless": "^1.0.1",
     "@radix-ui/react-use-controllable-state": "^1.1.0",
     "ai": "^5.0.48",
     "ai-elements": "^1.1.2",
@@ -18,6 +20,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.542.0",
     "mapbox-gl": "^3.15.0",
+    "mcp-handler": "^1.0.2",
     "nanoid": "^5.1.5",
     "next": "15.5.3",
     "radix-ui": "^1.4.3",
@@ -25,6 +28,7 @@
     "react-dom": "19.1.0",
     "react-map-gl": "^8.0.4",
     "react-syntax-highlighter": "^15.6.6",
+    "recharts": "^3.2.1",
     "streamdown": "^1.3.0",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.8",
