--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "nextjs",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18 <=22"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,7 +14,9 @@
     "@ai-sdk/gateway": "^1.0.25",
     "@ai-sdk/openai": "^2.0.32",
     "@ai-sdk/react": "^2.0.48",
+    "@modelcontextprotocol/sdk": "^1.18.1",
     "@neondatabase/serverless": "^1.0.1",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-use-controllable-state": "^1.1.0",
     "ai": "^5.0.48",
     "ai-elements": "^1.1.2",
@@ -33,10 +38,11 @@
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.8",
     "use-stick-to-bottom": "^1.1.1",
-    "zod": "^4.1.11"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/hast": "^3.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
