--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "mcp:neon": "NEON_API_KEY=\"$NEON_API_KEY\" npx -y @neondatabase/mcp-server-neon start $NEON_API_KEY"
   },
   "dependencies": {
     "@ai-sdk/gateway": "^1.0.25",
     "@ai-sdk/openai": "^2.0.32",
     "@ai-sdk/react": "^2.0.48",
+    "@composio/core": "^0.1.52",
+    "@composio/vercel": "^0.2.8",
     "@modelcontextprotocol/sdk": "^1.18.1",
     "@neondatabase/serverless": "^1.0.1",
     "@radix-ui/react-tabs": "^1.1.13",
