--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "exa-js": "^1.9.3",
     "lucide-react": "^0.542.0",
     "mapbox-gl": "^3.15.0",
     "mcp-handler": "^1.0.2",
