--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mcp:neon": "NEON_API_KEY=\"$NEON_API_KEY\" npx -y @neondatabase/mcp-server-neon start $NEON_API_KEY"
   },
   "dependencies": {
+    "@ai-sdk/elevenlabs": "^1.0.11",
     "@ai-sdk/gateway": "^1.0.25",
     "@ai-sdk/openai": "^2.0.32",
     "@ai-sdk/react": "^2.0.48",
@@ -21,6 +22,8 @@
     "@neondatabase/serverless": "^1.0.1",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-use-controllable-state": "^1.1.0",
+    "@sendgrid/mail": "^8.1.6",
+    "@stackframe/stack": "^2.8.39",
     "ai": "^5.0.48",
     "ai-elements": "^1.1.2",
     "class-variance-authority": "^0.7.1",
@@ -46,6 +49,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/geojson": "^7946.0.16",
     "@types/hast": "^3.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
